Added profile picture functionality in backend and added profile editing in frontend

--- a/frontend/src/style/Home.css
+++ b/frontend/src/style/Home.css
@@ -22,7 +22,7 @@ h2 {
 
 
 p {
-    color: #685206;
+    color: white;
     font-family: 'Helvetica Neue', sans-serif;
     font-size: 25px;
     line-height: 24px;
