--- a/frontend/src/style/Navbar.css
+++ b/frontend/src/style/Navbar.css
@@ -5,11 +5,13 @@ body {
 
 .navbar {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    position: sticky;
+    top: 0px;
     display: flex;
-    position: relative;
     justify-content: space-between;
     align-items: center;
     color: white;
+    z-index: 3;
 }
 
 .top-section {
@@ -48,6 +50,9 @@ header {
     position: fixed;
     width: 100%;
     transition: 0.5s;
+}
+.cool-link{
+    cursor: pointer;
 }
 
 .cool-link::after {
