--- a/frontend/src/style/Navbar.css
+++ b/frontend/src/style/Navbar.css
@@ -4,7 +4,7 @@ body {
 }
 
 .navbar {
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     position: sticky;
     top: 0px;
     display: flex;
@@ -51,7 +51,8 @@ header {
     width: 100%;
     transition: 0.5s;
 }
-.cool-link{
+
+.cool-link {
     cursor: pointer;
 }
 
@@ -74,7 +75,7 @@ header {
     position: absolute;
     min-width: 150px;
     right: 0;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     background: linear-gradient(rgb(10, 10, 10), #0000);
 }
@@ -83,8 +84,45 @@ header {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-.dropdown:hover #Avatar{
+
+.dropdown:hover #Avatar {
     box-shadow: 0 0 1pt 1pt white;
+}
+
+.autocomplete {
+    /*the container must be positioned relative:*/
+    position: relative;
+    display: inline-block;
+}
+
+.autocomplete-items {
+    position: absolute;
+    border: 1px solid #d4d4d4;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
+    /*position the autocomplete items to be the same width as the container:*/
+    top: 100%;
+    left: 0;
+    right: 0;
+}
+
+.autocomplete-items div {
+    padding: 10px;
+    cursor: pointer; 
+    background-color: #fff;
+    border-bottom: 1px solid #d4d4d4;
+}
+
+.autocomplete-items div:hover {
+    /*when hovering an item:*/
+    background-color: #e9e9e9;
+}
+
+.autocomplete-active {
+    /*when navigating through the items using the arrow keys:*/
+    background-color: DodgerBlue !important;
+    color: #ffffff;
 }
 
 @media (max-width: 1000px) {
@@ -92,31 +130,39 @@ header {
         flex-direction: column;
         align-items: flex-start;
     }
+
     .brand-title {
         display: none;
     }
+
     .toggle-button {
         display: flex;
     }
+
     .navbar-links {
         display: none;
         width: 100%;
     }
+
     .navbar-links ul {
         width: 100%;
         flex-direction: column;
     }
+
     .navbar-links ul li {
         text-align: center;
     }
+
     .navbar-links ul li a {
         padding: .5rem 1rem;
         transition: 0.5s
     }
+
     .navbar-links.active {
         display: flex;
         transition: 0.5s;
     }
+
     .top-section {
         position: relative;
     }
