Dynamic searchbar functionality added

--- a/frontend/src/style/Navbar.css
+++ b/frontend/src/style/Navbar.css
@@ -98,6 +98,7 @@ header {
 .autocomplete-items {
     position: absolute;
     border: 1px solid #d4d4d4;
+    color: black;
     border-bottom: none;
     border-top: none;
     z-index: 99;
