--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,17 +1,18 @@
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
+
 * {
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
   display: flex;
   font-weight: 400;
-  background: linear-gradient(to right,  #8a2931,#161B34);
+  background: linear-gradient(to right, #8a2931, #161B34);
 }
 
 code {
@@ -19,7 +20,10 @@ code {
     monospace;
 }
 
-body, html, .App, #root {
+body,
+html,
+.App,
+#root {
   width: 100%;
   height: 100%;
 }
