--- a/frontend/src/style/Project.scss
+++ b/frontend/src/style/Project.scss
@@ -48,18 +48,21 @@
 }
 
 .project img {
-  width: 50px;
-  height: 50px;
+  width: 37px;
+  height: 37px;
   border-radius: 50%;
 }
 
 .project-progress .info {
   display: flex;
   justify-content: space-around;
+  text-align: center;
 }
 
 .project>.info {
-  flex-direction: column;
+  display: flex;
+  flex-direction: column; 
+  row-gap: 20px;
 }
 
 .project>.info div{
