--- a/frontend/src/style/Navbar.scss
+++ b/frontend/src/style/Navbar.scss
@@ -14,6 +14,7 @@
 }
 
 .navbar {
+  padding: 0px 15px;
   box-shadow: 0px 5px 16px 0px rgba(0, 0, 0, 0.2);
   background-color: rgba(0, 0, 0, 0.3);
   /* background-color: rgba(255, 255, 255, 0.3); */
