--- a/frontend/src/style/ProjectTasksPage.css
+++ b/frontend/src/style/ProjectTasksPage.css
@@ -7,13 +7,15 @@
     margin: 0;
   }
   .pane{
-      
+    text-align: center;
     padding: 10px 0px;
   }
+  
 .leftpane {
     width: 33%;
     height: 100%;
     float: left;
+    color: rgb(197, 156, 140);
     /* background-color: rgb(255, 255, 250); */
     /* border-collapse: collapse; */
 }
@@ -22,6 +24,7 @@
     width: 34%;
     height: 100%;
     float:left;
+    color : rgb(149, 149, 149) ;
     /* background-color: rgb(241, 243, 248); */
     /* border-collapse: collapse; */
 }
@@ -31,15 +34,25 @@
   height: 100%;
   position: relative;
   float: right;
+  color : rgb(200, 235, 200) ;
   /* background-color: rgb(255, 255, 250); */
   /* border-collapse: collapse; */
 }
 
 .toppane {
   width: 100%;
-  height: 100px;
+  /* height: 100px; */
   /* border-collapse: collapse; */
   background-color: #e4e8ec;
   padding: 10px;
   border-radius: 10px;
+}
+.toppane a{
+  position:relative;
+  left : 92%;
+  bottom: 10%;
+}
+.info{
+  width: 10%;
+  align-self: flex-start;
 }
