--- a/frontend/src/style/ProjectsPage.css
+++ b/frontend/src/style/ProjectsPage.css
@@ -3,3 +3,10 @@
     flex-direction: column;
     gap: 36px;
 }
+.projlink{
+    text-decoration: none;
+}
+
+.projlink:hover{
+    background-color : rgba(96, 109, 121, 0.24) ;
+}
