--- a/frontend/src/style/TaskCard.css
+++ b/frontend/src/style/TaskCard.css
@@ -1,6 +1,14 @@
 .card {
+    text-align: left;
     flex-grow: 0.6;
     width: 48%;
     margin: 1%;
     float: left;
+    }
+
+img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    float: right;
     }
