Made the create project page functional with the backend, fixed some bugs and added some minor features

--- a/frontend/src/style/Projects.scss
+++ b/frontend/src/style/Projects.scss
@@ -13,6 +13,7 @@
             filter: drop-shadow(0 0 35px #fff);
         }
     }
+    z-index: 3;
 }
 .projects svg:hover{
     transform: scale(1.2);
