--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -27,3 +27,21 @@ html,
   width: 100%;
   height: 100%;
 }
+
+html::-webkit-scrollbar {
+  width: 10px;
+}
+
+html::-webkit-scrollbar-thumb {
+  
+  background-color: #888;
+  border-radius: 15px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background-color: #AAA;
+}
+
+html::-webkit-scrollbar-track {
+  background-color: #333;
+}
