--- a/frontend/src/style/Project.scss
+++ b/frontend/src/style/Project.scss
@@ -35,7 +35,7 @@
   display: flex;
   justify-content: space-between;
   color: white;
-  border-bottom: 1px solid;
+  border-bottom: 1px groove;
   border-radius: 2px;
   padding: 35px;
 }
